--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="col-lg-8 content">
             <h2>Diseñador Industrial &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-              Diseñador industrial con experiencia en diseño 3D(Rhinoceros/Solidworks/Blender), mecanización CNC y desarrollo de planos, así como en renderizado de alta calidad(Keyshot/V-Ray). Además, tengo habilidades en desarrollo web, dominando HTML, CSS y Bootstrap para crear sitios web atractivos y responsivos.
+              Diseñador industrial con experiencia en diseño 3D(Rhinoceros/Solidworks/Promob/Blender), mecanización CNC y desarrollo de planos, así como en renderizado de alta calidad(Keyshot/V-Ray). Además, tengo habilidades en desarrollo web, dominando HTML, CSS y Bootstrap para crear sitios web atractivos y responsivos.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -408,6 +408,17 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/14.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Barquilla de salida</h4>
+                  <p>Diseño y mecanizacion CNC de Barquilla de salida para atracciones acuaticas</p>
+                  <a href="assets/img/portfolio/14.jpg" title="Diseño y mecanizacion CNC de Barquilla de salida para atracciones acuaticas" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.png" class="img-fluid" alt="">
@@ -415,6 +426,116 @@
                   <h4>Diseño 3D de ideas</h4>
                   <p>Diseño de caracteristicas freelance de un dispositivo cnc </p>
                   <a href="assets/img/portfolio/branding-3.png" title="Diseño de caracteristicas freelance de un dispositivo cnc" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Bahiut Wengue</h4>
+                  <p>Diseño y fabricación de Bahiut en melamina Wengue</p>
+                  <a href="assets/img/portfolio/1.jpg" title="Diseño y fabricación de Bahiut en melamina Wengue" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Bajo mesada</h4>
+                  <p>Diseño y fabricación de Bajo mesada empotrado</p>
+                  <a href="assets/img/portfolio/2.jpg" title="Diseño y fabricación de Bajo mesada en melamina Blanca para empotrar" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Modulos de cocina</h4>
+                  <p>Diseño de modulos de cocina</p>
+                  <a href="assets/img/portfolio/3.jpg" title="Diseño de modulos de cocina, finalmente fabricados e instalados" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Bajo Mesada</h4>
+                  <p>Diseño de Bajo mesada</p>
+                  <a href="assets/img/portfolio/4.jpg" title="Diseño de Bajo mesada" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Baulera</h4>
+                  <p>Diseño de Baulera estilo americano</p>
+                  <a href="assets/img/portfolio/5.jpg" title="Diseño de Baulera estilo americano" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/6.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Modulos para cocina</h4>
+                  <p>Diseño de modulos para remodelación de cocina</p>
+                  <a href="assets/img/portfolio/6.jpg" title="Diseño de modulos para remodelación de cocina" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/7.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Escritorio Gamer</h4>
+                  <p>Diseño de escritorio gamer personalizado</p>
+                  <a href="assets/img/portfolio/7.jpg" title="Diseño de escritorio gamer personalizado" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/9.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Mesita de luz</h4>
+                  <p>Fabricación de mesita de luz</p>
+                  <a href="assets/img/portfolio/9.jpg" title="Fabricación de mesita de luz en melamina" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/10.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Mostrador de Farmacia</h4>
+                  <p>Diseño e Instalación de Mostrador de Farmacia</p>
+                  <a href="assets/img/portfolio/10.jpg" title="Diseño e Instalación de Mostrador de Farmacia" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/11.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Modular</h4>
+                  <p>Diseño de modular</p>
+                  <a href="assets/img/portfolio/11.jpg" title="Diseño de modular" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
